Update entrypoint scripts and document to align with new CLI
Update entrypoint scripts for k8s, docker v2plugin to align with
new CLI, update documents, k8s config yaml.
Drive by update vagrantfile, kubeadm_test, utils/configs.go to make
codes more readable.

Signed-off-by: Wei Tie <wtie@cisco.com>

--- a/install/k8s/contiv/contiv.yaml
+++ b/install/k8s/contiv/contiv.yaml
@@ -8,18 +8,21 @@ metadata:
   name: contiv-config
   namespace: kube-system
 data:
+  contiv_mode: kubernetes
+  contiv_fwdmode: routing
+  contiv_netmode: vxlan
   # The location of your cluster store. This is set to the
   # avdertise-client value below from the contiv-etcd service.
   # Change it to an external etcd/consul instance if required.
-  cluster_store: "etcd://__NETMASTER_IP__:6666"
+  contiv_etcd: "http://__NETMASTER_IP__:6666"
   # The CNI network configuration to install on each node.
-  cni_config: |-
+  contiv_cni_config: |-
     {
       "cniVersion": "0.1.0",
       "name": "contiv-net",
       "type": "contivk8s"
     }
-  config: |-
+  contiv_k8s_config: |-
     {
        "K8S_API_SERVER": "https://__NETMASTER_IP__:6443",
        "K8S_CA": "/var/run/secrets/kubernetes.io/serviceaccount/ca.crt",
@@ -29,7 +32,7 @@ data:
     }
 ---
 
-# This manifest installs the Contiv etcd on the kubeadm master. 
+# This manifest installs the Contiv etcd on the kubeadm master.
 # If using an external etcd instance, this can be deleted. This uses a DaemonSet
 # to force it to run on the master even when the master isn't schedulable, and uses
 # nodeSelector to ensure it only runs on the master.
@@ -95,31 +98,46 @@ spec:
         # container programs network policy and routes on each
         # host.
         - name: contiv-netplugin
-          image: contiv/netplugin:v1.0.0-alpha-01-28-2017.10-23-11.UTC
-          args:
-            - -pkubernetes
+          image: contiv/netplugin:1.1.7
           env:
-            - name: VLAN_IF
+            - name: CONTIV_ROLE
+              value: netplugin
+            - name: CONTIV_NETPLUGIN_VLAN_UPLINKS
               value: __VLAN_IF__
-            - name: VTEP_IP
-              valueFrom:
-                 fieldRef:
-                    fieldPath: status.podIP
-            - name: CONTIV_ETCD
+            - name: CONTIV_NETPLUGIN_MODE
               valueFrom:
                 configMapKeyRef:
                   name: contiv-config
-                  key: cluster_store
+                  key: contiv_mode
+            - name: CONTIV_NETPLUGIN_VTEP_IP
+              valueFrom:
+                 fieldRef:
+                    fieldPath: status.podIP
+            - name: CONTIV_NETPLUGIN_ETCD_ENDPOINTS
+              valueFrom:
+                configMapKeyRef:
+                  name: contiv-config
+                  key: contiv_etcd
             - name: CONTIV_CNI_CONFIG
               valueFrom:
                 configMapKeyRef:
                   name: contiv-config
-                  key: cni_config
-            - name: CONTIV_CONFIG
+                  key: contiv_cni_config
+            - name: CONTIV_K8S_CONFIG
               valueFrom:
                 configMapKeyRef:
                   name: contiv-config
-                  key: config
+                  key: contiv_k8s_config
+            - name: CONTIV_NETPLUGIN_FORWARD_MODE
+              valueFrom:
+                configMapKeyRef:
+                  name: contiv-config
+                  key: contiv_fwdmode
+            - name: CONTIV_NETPLUGIN_NET_MODE
+              valueFrom:
+                configMapKeyRef:
+                  name: contiv-config
+                  key: contiv_netmode
           securityContext:
             privileged: true
           volumeMounts:
@@ -134,6 +152,9 @@ spec:
               readOnly: false
             - mountPath: /var/contiv
               name: var-contiv
+              readOnly: false
+            - mountPath: /var/log/contiv
+              name: var-log-contiv
               readOnly: false
             - mountPath: /etc/kubernetes/pki
               name: etc-kubernetes-pki
@@ -174,6 +195,9 @@ spec:
         - name: etc-cni-dir
           hostPath:
             path: /etc/cni/net.d/
+        - name: var-log-contiv
+          hostPath:
+            path: /var/log/contiv
 ---
 
 # This manifest deploys the Contiv API Server on Kubernetes.
@@ -209,16 +233,35 @@ spec:
       hostPID: true
       containers:
         - name: contiv-netmaster
-          image: contiv/netplugin:v1.0.0-alpha-01-28-2017.10-23-11.UTC
-          args:
-            - -m
-            - -pkubernetes
+          image: contiv/netplugin:1.1.7
           env:
-            - name: CONTIV_ETCD
+            - name: CONTIV_ROLE
+              value: netmaster
+            - name: CONTIV_NETMASTER_MODE
               valueFrom:
                 configMapKeyRef:
                   name: contiv-config
-                  key: cluster_store
+                  key: contiv_mode
+            - name: CONTIV_NETMASTER_ETCD_ENDPOINTS
+              valueFrom:
+                configMapKeyRef:
+                  name: contiv-config
+                  key: contiv_etcd
+            - name: CONTIV_K8S_CONFIG
+              valueFrom:
+                configMapKeyRef:
+                  name: contiv-config
+                  key: contiv_k8s_config
+            - name: CONTIV_NETMASTER_FORWARD_MODE
+              valueFrom:
+                configMapKeyRef:
+                  name: contiv-config
+                  key: contiv_fwdmode
+            - name: CONTIV_NETMASTER_NET_MODE
+              valueFrom:
+                configMapKeyRef:
+                  name: contiv-config
+                  key: contiv_netmode
           securityContext:
             privileged: true
           volumeMounts:
@@ -231,6 +274,9 @@ spec:
             - mountPath: /var/run
               name: var-run
               readOnly: false
+            - mountPath: /var/log/contiv
+              name: var-log-contiv
+              readOnly: false
             - mountPath: /var/contiv
               name: var-contiv
               readOnly: false
@@ -240,6 +286,7 @@ spec:
             - mountPath: /opt/cni/bin
               name: cni-bin-dir
               readOnly: false
+
       volumes:
         # Used by contiv-netmaster
         - name: etc-openvswitch
@@ -260,4 +307,7 @@ spec:
         - name: cni-bin-dir
           hostPath:
             path: /opt/cni/bin
+        - name: var-log-contiv
+          hostPath:
+            path: /var/log/contiv
 ---
