--- a/vagrant/nomad-docker/Vagrantfile
+++ b/vagrant/nomad-docker/Vagrantfile
@@ -31,7 +31,7 @@ echo "export GO15VENDOREXPERIMENT=1" >> /etc/profile.d/envvar.sh
 source /etc/profile.d/envvar.sh
 
 if [[ $# -gt 10 ]] && [[ ${11} != "" ]]; then
-    shift; shift; shift; shift; shift; shift; shift; shift; shift; shift
+    shift 10
     echo "export $@" >> /etc/profile.d/envvar.sh
 fi
 
