Set default to use etcd at http://127.0.0.1:2379
This commit make netplugin and netmaster to use etcd at http://127.0.0.1:2379
if neither etcd or consul endpoints are provided.
Also make v2plugin by default as netplugin role.

Signed-off-by: Wei Tie <wtie@cisco.com>

--- a/install/v2plugin/config.template
+++ b/install/v2plugin/config.template
@@ -13,7 +13,7 @@
           "Settable": [
              "value"
           ],
-          "Value": ""
+          "Value": "netplugin"
        },
        {
           "Description": "contiv log file directory",
@@ -37,7 +37,7 @@
           "Settable": [
              "value"
           ],
-          "Value": ""
+          "Value": "http://127.0.0.1:2379"
        },
        {
           "Description": "a comma-delimited list of netplugin VLAN uplink interfaces used by OVS",
@@ -149,7 +149,7 @@
           "Settable": [
              "value"
           ],
-          "Value": ""
+          "Value": "http://127.0.0.1:2379"
        },
        {
           "Description": "netmaster forwarding network mode, options: [bridge, routing]",
